--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: default
 title: 我的Blog　
 ---
 　　<h2>你真好，来看我的博客</h2>
-<p>新的域名，<a href="toulaoshi.me">toulaoshi.me</a>，爱你</p>
+<p>新的域名，<a href="http://toulaoshi.me">toulaoshi.me</a>，爱你</p>
